@@ -2,6 +2,7 @@ package hooks;
 
 import java.io.IOException;
 import java.nio.file.*;
+import java.time.LocalDateTime;
 
 public class ReportMerger {
 
@@ -13,46 +14,41 @@ public class ReportMerger {
         Path finalReport = targetDir.resolve("final-report.html");
 
         StringBuilder merged = new StringBuilder();
-        merged.append("""
-            <html>
-            <head>
-                <title>Final Combined Report</title>
-                <style>
-                    body { font-family: Arial, sans-serif; margin: 30px; background-color: #fafafa; }
-                    h2 { background: #222; color: white; padding: 10px; border-radius: 5px; }
-                    hr { border: none; border-top: 2px solid #ccc; margin: 40px 0; }
-                    iframe { width: 100%; height: 800px; border: 1px solid #ccc; border-radius: 8px; }
-                </style>
-            </head>
-            <body>
-            <h1>📊 Unified Automation Report</h1>
-            <p>Generated on: """ + java.time.LocalDateTime.now().toString() + """</p>
-            <hr>
-            """);
+
+        merged.append("<html><head><title>Final Combined Report</title>")
+              .append("<style>")
+              .append("body { font-family: Arial, sans-serif; margin: 30px; background-color: #fafafa; }")
+              .append("h2 { background: #222; color: white; padding: 10px; border-radius: 5px; }")
+              .append("hr { border: none; border-top: 2px solid #ccc; margin: 40px 0; }")
+              .append("iframe { width: 100%; height: 800px; border: 1px solid #ccc; border-radius: 8px; }")
+              .append("</style></head><body>")
+              .append("<h1>📊 Unified Automation Report</h1>")
+              .append("<p>Generated on: ").append(LocalDateTime.now().toString()).append("</p><hr>");
 
         if (Files.exists(cucumber)) {
-            merged.append("<h2>🐞 Cucumber Detailed Report</h2>");
-            merged.append("<iframe src='cucumber-report.html'></iframe>");
+            merged.append("<h2>🐞 Cucumber Detailed Report</h2>")
+                  .append("<iframe src='cucumber-report.html'></iframe>");
         } else {
             merged.append("<p>⚠️ Cucumber report not found.</p>");
         }
 
         if (Files.exists(summary)) {
-            merged.append("<hr><h2>🕒 Execution Summary</h2>");
-            merged.append(Files.readString(summary));
+            merged.append("<hr><h2>🕒 Execution Summary</h2>")
+                  .append(Files.readString(summary));
         } else {
             merged.append("<p>⚠️ Execution summary not found.</p>");
         }
 
         if (Files.exists(testReport)) {
-            merged.append("<hr><h2>📋 Custom Test Report</h2>");
-            merged.append(Files.readString(testReport));
+            merged.append("<hr><h2>📋 Custom Test Report</h2>")
+                  .append(Files.readString(testReport));
         } else {
             merged.append("<p>⚠️ Test report not found in test-history folder.</p>");
         }
 
         merged.append("</body></html>");
-        Files.writeString(finalReport, merged.toString(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+
+        Files.write(finalReport, merged.toString().getBytes(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
 
         System.out.println("✅ Final combined report generated at: " + finalReport.toAbsolutePath());
     }
